@@ -7,6 +7,10 @@ Revelation changelog
 	* fixed a bug introduced in yesterday's cleanups, which
 	omitted the treeview's scrolledwindow
 
+	* implemented a custom FileEntry widget to use instead of
+	the libgnomeui one - will hopefully fix some nasty crasher
+	bugs
+
 2004-06-09  Erik Grinaker <erikg@codepoet.no>
 
 	* fixed a bug with spin buttons which made it impossible
